--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "nuxt",
+    "special": "cross-env PORT=4000 nuxt dev",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
@@ -15,9 +16,12 @@
   "dependencies": {
     "bootstrap-vue": "^2.0.0-rc.10",
     "cookieparser": "^0.1.0",
+    "cross-env": "^5.2.0",
     "js-cookie": "^2.2.0",
     "nuxt": "^2.0.0",
-    "strapi-sdk-javascript": "^0.3.1"
+    "strapi-sdk-javascript": "^0.3.1",
+    "stripe": "^7.1.0",
+    "vue-stripe-elements-plus": "^0.2.10"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
